# Fundle

./: .gitignore  MIGRATION_README.md  README.md  dev.ps1  docker-compose.yml  fundle.config.env.example  package-lock.json  package.json  pr.md  setup.ps1
.github/workflows/: build-city-puzzles.yml  build-puzzle.yml  test.yml
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py  models.py  schemas.py
apps/api/app/routes/: puzzle.py
apps/api/app/services/: city_puzzle_builder.py  funda_url.py  game.py  hints.py  puzzle_builder.py
apps/api/tests/: conftest.py  test_city_puzzle.py  test_game.py  test_puzzle_buckets.py
apps/web/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: AppShell.tsx  CityGame.tsx  CityPicker.tsx  CityResultCard.tsx  CityShareActions.tsx  CopyResultButton.tsx  DifficultyBadge.tsx  Game.tsx  GameSkeleton.tsx  GuessInput.tsx  GuessTracker.tsx  HintPanel.tsx  HowToPlayModal.tsx  PhotoGallery.tsx  ResultCard.tsx  ShareButton.tsx  StatsFooter.tsx
apps/web/lib/: api.ts  cityApi.ts  cityData.ts  cityEngine.test.ts  cityEngine.ts  cityMock.test.ts  (+17 more)
scripts/: build_city_puzzles.py  build_daily_puzzle.py  check-dev.js  check-dev.ps1  dev.js  gen_city_fixtures.py  gen_parity_fixtures.py  setup.js  sync_config.js  sync_config.py
supabase/: README.md
supabase/migrations/: 0001_daily_puzzle_cron.sql  0002_abuse_protection.sql  0003_evening_prebuild_cron.sql  0004_city_mode.sql  0005_city_puzzle_cron.sql
(+3 files in other folders)
