[project]
name = "fundle"
version = "0.1.0"
description = "fundle daily-puzzle builder"
requires-python = ">=3.13"
dependencies = [
    "pyfunda>=3.1.3",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
